# jeertmans.github.io

./: .gitignore  .pre-commit-config.yaml  CNAME  Gemfile  README.md  _config.yml  index.html  notebooks_to_posts.sh  pyproject.toml  requirements.txt  ruff.toml
.github/: dependabot.yml
.github/workflows/: automerge.yml  clearcache.yml  codeql-analysis.yml  deploy.yml  github-pages.yml  jekyll-docker.yml  languagetool.yml
_bibliography/: references.bib
_data/: contact.yml  cv.yaml  navigation.yml  projects.yml  publications.yml  resume.yml  share.yml  teaching.yml
_drafts/: 2022-08-29-mcq-opinion.md
_includes/: bibtex.html  codeHeader.html  doi.html  download.html  edit-on-github.html  education.html  excerpt.html  experiences.html  interests.html  languages.html  masthead.html  page__hero.html  profile.html  projects.html  publications.html  resume.html  scripts.html  skills.html  slides.html  teaching.html  teaching_duties.html
_layouts/: default.html  home.html  post.html  posts.html  projects.html  research.html  teaching.html
_notebooks/: 2022-04-28-utd-transition-function.ipynb  2022-06-15-cost-interact-presentation.ipynb  2022-08-29-mcq-opinion.ipynb  2022-11-05-plotly-example.ipynb  2024-04-01-interest-rate-stocks.ipynb  plotting.py
_pages/: about.md  resume.md
_posts/: 2022-04-27-welcome-to-my-blog.md  2022-06-15-cost-interact-presentation.md  2022-06-15-cost-interact.md  2023-03-27-eucap-presentation.md  2023-03-27-eucap.md  2023-03-28-rust-binaries-to-github-action.md  2023-07-17-siegen-presentation.md  2023-07-17-siegen.md  2023-12-07-confirmation.md  2024-03-18-eucap-presentation.md  2024-03-18-eucap.md  2024-04-16-milan-presentation.md  2024-04-16-milan.md  2024-06-16-helsinki-differt2d-presentation.md  2024-06-16-helsinki-differt2d.md  2024-06-16-helsinki-mlxrt.md  2025-01-27-dublin-presentation.md  2025-01-27-dublin.md  2025-04-01-eucap-presentation.md  2025-04-01-eucap.md  2025-04-02-writing-long-manim-presentations.md  2025-05-27-icmlcn-presentation.md  2025-05-27-icmlcn.md  2025-06-27-emts.md  2025-08-18-her-with-jax.md  2026-01-09-icteam-video-capsule.md  2026-04-01-20-eucap.md  2026-04-20-eucap.md  2026-05-05-private-defense.md  2026-07-06-public-defense.md
_projects/: ade-scheduler.md  deltri.md  differt.md  differt2d.md  filesfinder.md  languagetool-rust.md  manim-slides.md  manim-tutorial.md  selsearch.md
_redirects/: cost20210_helsinki.md  resume.md
_sass/online-resume/: _base.scss  _default.scss  _print.scss  _responsive.scss
_slides/: make_slides.sh  requirements.txt
_slides/2023-03-27-eucap-presentation/: main.html  main.py  pyproject.toml
_slides/2023-07-17-siegen-presentation/: main.py  pyproject.toml  requirements.txt
_slides/2023-12-07-confirmation/: .manim-slides.toml  main.py  manim.cfg  pyproject.toml  requirements.txt
_slides/2024-03-17-eucap-presentation/: main.py  requirements.txt
_slides/2024-03-18-eucap-presentation/: main.py  pyproject.toml
_slides/2024-04-16-milan-presentation/: complex_geom  main.py  opti_images  pyproject.toml  qrcodes  requirements.txt  rt_images
_slides/2025-01-27-dublin-presentation/: main.py  pyproject.toml
_slides/2025-04-01-eucap-presentation/: main.py  pyproject.toml
_slides/2025-06-27-bologna-presentation/: main.py  pyproject.toml
_slides/2025-06-27-emts-presentation/: main.py  pyproject.toml
_slides/2026-04-20-eucap-presentation/: generate-geometry-annotated.tex  generate-geometry.tex  generate-street-canyon-illustration.py  generate-street-canyon-illustrations.py  main.py  pyproject.toml  reverse-mode-ad.py
_slides/2026-05-05-private-defense/: contents.md  generate-discontinuity-illustrations.py  generate-moller-trumbore-smoothed.tex  generate-opti-problem.py  generate-pipeline.tex  generate-power-map.py  generate-street-canyon-illustration.py  generate-street-canyon-illustrations.py  generate-transmitter-optimization-illustrations.py  generate-transmitter-optimization.py  generate-valid-vs-invalid-paths.py  generate-zero-gradient.py  main.py  pyproject.toml
_slides/2026-07-06-public-defense/: generate-antenna-rotation-sequences.py  generate-antenna-visualizations.py  generate-billiard-analogy.py  generate-defense-animations.py  generate-differt-logo-apparition.py  generate-teaser-videos.py  main.py  pyproject.toml
_slides/2026-XX-XX-public-defense/: pyproject.toml
_tabs/: about.md  archives.md  categories.md  projects.md  research.md  resume.md  tags.md  teaching.md
assets/css/: github-icon.css  jekyll-theme-chirpy.scss  main.scss  profile.css  resume.css  style.scss  theme-toggle.css  tooltip.css
assets/events/: public-defense.ics
assets/publications/: eucap2023-paper.bib  eucap2024-paper.bib  eucap2025-paper.bib  eucap2026-paper.bib  icmlcn2025-demo.bib  icmlcn2025-paper.bib  joss2024-paper.bib  manim-slides-paper.bib  mastersthesis2021.bib  npjwt2026-paper.bib  phdthesis2026.bib
assets/scripts/: index.js  (+4 more)
docs/: _config.yml
(+122 files in other folders)
