[project]
name = "jeertmans-github-io"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "scipy>=1.16.1",
]

[dependency-groups]
dev = [
    "jupyter-contrib-nbextensions>=0.7.0",
    "notebook<7",
]

[tool.ruff]

extend-include = ["*.ipynb"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["B", "C90", "I", "RUF", "UP", "T"]

[tool.ruff.lint.per-file-ignores]
"_slides/**.py" = [
  "C901",  # Too complex structure
  "F403",  # Star import
  "F405",  # Undefined variables (from star import)
  "F722",  # Error in forward annotation
]
