[project]
name = "2025-01-27-dublin-presentation"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "differt>=0.0.30",
    "kaleido==1.0.0rc0",
    "manim-slides[manim,pyside6]==5.4.0",
    "numpy>=2.2.2",
    "opencv-python>=4.11.0.86",
    "plotly>=5.24.1",
]
