[project]
dependencies = [
  "differt>=0.0.30",
  "equinox>=0.11.11",
  "kaleido==1.0.0rc0",
  "manim-slides[manim,pyside6]==5.4.2",
  "numpy>=2.2.2",
  "pillow>=11.1.0",
  "plotly>=5.24.1",
  "pyside6==6.6.1",
  "scipy>=1.15.1",
]
description = "Add your description here"
name = "2025-01-27-dublin-presentation"
requires-python = ">=3.11"
version = "0.1.0"
