[project]
dependencies = [
  "differt==0.5.0",
  "equinox>=0.11.11",
  "kaleido==0.2.1",
  "manim-slides[manim]==5.5.2",
  "numpy>=2.2.2",
  "pillow>=11.1.0",
  "plotly>=5.24.1,<6",
  "pyside6==6.6.1",
  "scipy>=1.15.1",
]
name = "2025-01-27-dublin-presentation"
requires-python = ">=3.11"
version = "0.1.0"
