[project]
name = "2025-04-01-eucap-presentation"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "differt==0.0.33",
    "choreographer<1",
    "equinox>=0.11.11",
    "kaleido==0.2.1",
    "manim-slides[manim,pyside6]==5.5.0",
    "pillow>=11.1.0",
    "plotly>=5.24.1,<6",
    "scipy>=1.15.1",
]
