[project]
dependencies = [
  "differt>=0.8.2",
  "equinox>=0.13.8",
  "jax>=0.10.2",
  "kaleido==0.2.1",
  "librosa>=0.11.0",
  "manim>=0.20.1",
  "manim-slides[manim,pyside6]==5.6.0",
  "matplotlib>=3.11.0",
  "pillow>=12.2.0",
  "plotly>=6.8.0",
]
description = "Add your description here"
name = "2026-07-06-public-defense"
requires-python = ">=3.11"
version = "0.1.0"
